--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
     <h2 id="statusText"></h2>
     <button id="restartBtn">Restart</button>
 </div>
+<audio loop preload="auto">
+    <source src="kids-game-gaming-background-music-295075.mp3" type="audio/mpeg">
+</audio>
 <script src="index.js"></script>
 
 </body>
